fixed the compareto method to use hashcode instead of
just using name